Modifying navbar position to fixed and fixing bugs on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ h1,h2,h3,h4,h5,h6 {
     padding: 0 !important;
 }
 
+.nav-container {
+    left: 50% !important;
+    transform: translateX(-50%);
+    z-index: 2 !important;
+}
+
+
 
 .block-service {
     width: 100%;
